# BLINK_CORE

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  README_CORE.md  build.sh  main.cpp  pack_core.sh  unpack_core.sh
configs/: core.conf
include/: main_loop.h
include/blink_api/: api.h
include/blink_core/: api_loader.h  api_runtime.h  arg_parser.h  cli_io.h  config.h  logger.h  version.h.in
include/ecs_core/: arg_parser.h  config.h  logger.h
src/: arg_parser.cpp  config.cpp  main.cpp  main_loop.cpp
src/blink_core/: api_loader.cpp  api_runtime.cpp  arg_parser.cpp  cli_io.cpp  config.cpp  logger.cpp
src/ecs_core/: arg_parser.cpp  config.cpp  logger.cpp
